# vpn-server

./: .gitignore  Cargo.toml  Doxyfile  LICENSE  README.md  server.toml  utun3.conf  wg-server.conf
.github/workflows/: rust.yml
public/: index.html
src/: config.rs  enroll_http.rs  filelog.rs  lib.rs  main.rs  nat.rs  peer_registry.rs  runtime.rs  wg.rs
tests/: config_tests.rs  ct_f04_multi_clients.rs  ct_f05_key_management.rs  enroll_http_tests.rs  enroll_redirect_tests.rs  enroll_success_json.rs  functional_assignment_routing.rs  perf_latency.rs  perf_throughput.rs  performance_http_latency.rs  root_serves_index.rs
