[package]
name = "vpn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
defguard_wireguard_rs = "0.7.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
qrcode = "0.14.1"
base64 = "0.22"
env_logger = "0.11"
log = "0.4"
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
